# juggling-tracker

./: .gitignore  README.md  analyze_video.py  initial_overview.md  pyproject.toml  todo.md
src/jugglecount/: app.py  detector.py  events.py  features.py  ingest.py  processing.py  runs.py  schema.py  segmenter.py  tracker.py  utils.py  viz.py
src/jugglecount/core/: detector.py  events.py  features.py  pipeline.py  processing.py  runs.py  segmenter.py  signature_detector.py  tracker.py  viz.py
src/jugglecount/db/: db.py  schema.py
src/jugglecount/scripts/: analyze_video.py  benchmark_models.py  benchmark_visual_accuracy.py  benchmark_visual_signature.py  check_device.py  check_fps.py  check_yolo11.py  debug_viz_accuracy.py  debug_viz_tracking.py  debug_viz_tracking_v2.py  export_coreml.py  plot_results.py  verify_db.py
src/jugglecount/web/: app.py  live_processor.py  voice_processor.py
tests/: test_live_processor.py
